[tool.poetry]
name = "streamlit-sales-dashboard"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
streamlit = "^1.8.0"
plotly = "^5.6.0"
watchdog = "^2.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
